--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -14,31 +14,11 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label_header">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>70</y>
-      <width>131</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>19</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>汇率转换器</string>
-    </property>
-   </widget>
    <widget class="QComboBox" name="boud_list">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>200</y>
+      <x>120</x>
+      <y>360</y>
       <width>131</width>
       <height>22</height>
      </rect>
@@ -50,6 +30,16 @@
     </item>
     <item>
      <property name="text">
+      <string>19200</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>38400</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
       <string>115200</string>
      </property>
     </item>
@@ -57,8 +47,8 @@
    <widget class="QLabel" name="label_USD_2">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>200</y>
+      <x>20</x>
+      <y>360</y>
       <width>41</width>
       <height>23</height>
      </rect>
@@ -70,8 +60,8 @@
    <widget class="QLabel" name="label_USD_3">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>170</y>
+      <x>20</x>
+      <y>330</y>
       <width>41</width>
       <height>23</height>
      </rect>
@@ -80,11 +70,11 @@
      <string>串口</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="port_list">
+   <widget class="QComboBox" name="box_ports">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>170</y>
+      <x>120</x>
+      <y>330</y>
       <width>131</width>
       <height>22</height>
      </rect>
@@ -93,8 +83,8 @@
    <widget class="QPushButton" name="btn_portScan">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>170</y>
+      <x>270</x>
+      <y>330</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -103,35 +93,15 @@
      <string>检测</string>
     </property>
    </widget>
-   <widget class="QSplitter" name="splitter">
+   <widget class="QWidget" name="widget" native="true">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>110</y>
-      <width>377</width>
-      <height>23</height>
+      <x>40</x>
+      <y>40</y>
+      <width>421</width>
+      <height>261</height>
      </rect>
     </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-    <widget class="QLineEdit" name="inputEdit"/>
-    <widget class="QLabel" name="label_USD">
-     <property name="text">
-      <string>USD</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btn_transform">
-     <property name="text">
-      <string>转换</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="outputEdit"/>
-    <widget class="QLabel" name="label_CNY">
-     <property name="text">
-      <string>CNY</string>
-     </property>
-    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
